feat(frontend): frontend section of portfolio

--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -16,6 +16,7 @@
             margin-bottom: 20px;
             line-height: 30px; /* Adjust this value to vertically center the bullet with the text */
             cursor: pointer;
+            padding-right: 10px;
         }
         .resume__menu_item.active{
             border: 1px solid #E29ECD;
