--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$primary-bg-color: #060606;
+$primary-bg-color: #0e0e0e;
 $secondary-bg-color: #171717;
 $tertiary-bg-color: #1F1F1F;
 $primary-font-color: #ffff;
