--- a/src/components/aboutme/aboutmeImage/abtMeImg.scss
+++ b/src/components/aboutme/aboutmeImage/abtMeImg.scss
@@ -75,7 +75,7 @@
         // background-image: url("your-image-url.jpg");
         background-size: cover;
         border-radius: 50%;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+        // box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
         img{
             width: 100%;
             height: 100%;
