feat(frontend): mouse moving anuiimation

--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -14,6 +14,19 @@
         color: $primary-font-color;
         font-size: 16px;
         font-weight: 400;
+        cursor: pointer;
+        
+    }
+    /* Scale from center */
+    .navBar__link::after {
+      opacity :1;
+      transform: scale(0);
+      transform-origin: center;
+    }
+    
+    .navBar__link:hover::after,
+    .navBar__link:focus::after{
+      transform: scale(1);
     }
 }
 }
