--- a/src/components/resume/resumeContents/resumeContent.scss
+++ b/src/components/resume/resumeContents/resumeContent.scss
@@ -4,8 +4,8 @@
         background: #1F1F1F;
         height: 100%;
         min-height: 400px;
-        border: 1px solid #E29ECD;
+        // border: 1px solid #E29ECD;
         border-radius: 8px;
-        max-width: 750px;
+        max-width: 850px;
         display: flex;
 }
