--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,23 @@
 @import './styles/variables';
 .App{
     background-color: $primary-bg-color;
+    position: relative;
+.app__cursor-animation{
+    position:absolute;
+    background:radial-gradient(circle, rgba(226,158,205,1) 0%, rgba(202,136,243,1) 35%, rgba(226,158,205,1) 100%);
+    width: 200px;
+    height: 100px;
+    filter: blur(70px);
+    border-radius: 50%;
+    opacity: .5;
+    transition: all .5s ease-out;
 
+}
+.app__cursor-animation.hide{
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+    transition: all 3s ease-out .5s;
+}
    
 }
