--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -1,12 +1,16 @@
 .resume__container{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    background-color: #1F1F1F;
+    border-radius: 5px;
+    padding: 30px;
 
     .resume__menu{
         display: flex;
         align-items: center;
         justify-content: center;
+        box-shadow: 6px 0px 6px 0 rgb(76 76 76 / 21%);
         // flex-grow: 1;
         .resume__menu_item {
             display: flex;
@@ -19,13 +23,13 @@
             padding-right: 10px;
         }
         .resume__menu_item.active{
-            border: 1px solid #E29ECD;
+            // border: 1px solid #E29ECD;
             border-radius: 30px 0px 0px 30px;
-            border-right: 1px solid #1F1F1F;
-            background-color: #1F1F1F;
-            padding: 4px;
+            // border-right: 1px solid #1F1F1F;
+           
+            // padding: 4px;
             // box-shadow: -6px 1px 11px 3px rgba(226, 158, 205, 0.44);
-            margin-right: -1px;
+          
             position: relative;
             z-index: 9999;
         }
@@ -50,6 +54,7 @@
             list-style-type: none;
             .resume__menu_item{
                 font-size: 20px;
+                padding: 15px;
 
             }
             .resume__menu_item::marker{
