fix(client): new ui

--- a/src/components/resume/resumeContents/education/education.scss
+++ b/src/components/resume/resumeContents/education/education.scss
@@ -11,14 +11,14 @@
         flex-direction: column;
         padding: 20px;
         border-radius: 5px;
-        border: 1px solid #E29ECD;
-        background: #B177F0;
+        border: 1px solid #EDEEEF;
+        // background: #B177F0;
         max-width: 630px;
         width: 100%;
         row-gap: 5px;
 
         .education__stage{
-            color: #060606;
+            color: #ffffff;
             font-size: 16px;
             // font-style: normal;
             font-weight: 500;
@@ -30,17 +30,17 @@
             justify-content: space-between;
 
             .name{
-                color: #060606;          
+                color: #fff;          
                 font-size: 18px;
                 font-weight: 700;
             }
             .year{
                 border-radius: 50px;
-                border: 1px solid #7A00FF;
-                background: #E29ECD;
+                border: 1px solid #EDEEEF;
+                // background: #E29ECD;
                 padding: 3px 10px 3px 10px;
                 font-size: 14px;
-                color: #060606;
+                color: #ffffff;
             }
         }
     }
