--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 .App{
     background-color: $primary-bg-color;
     position: relative;
+    overflow: hidden;
 .app__cursor-animation{
     position:absolute;
     background:radial-gradient(circle, rgba(226,158,205,1) 0%, rgba(202,136,243,1) 35%, rgba(226,158,205,1) 100%);
