--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,5 +1,5 @@
 .contact__container{
-    background: #1f1f1f;
+    // background: #1f1f1f;
     padding: 40px;
     display: flex;
     align-items: center;
@@ -11,12 +11,31 @@
     row-gap: 20px;
 
    }
-    input{
+    input,textarea{
         
-        background: #4b4b4b;
-        border: 1px solid #4b4b4b;
+        background: #080809;
+        border: 1px solid #EDEEEF;
         height: 30px;
+        color: #EDEEEF;
+    } 
+    input:focus-visible,textarea:focus-visible{
+        
+        background: #080809;
+        border: 1px solid #EDEEEF;
+        border-radius: 0px;
+        height: 30px;
+        color: #ffff;
+    } 
+    input:focus,textarea:focus{
+        
+        background: #080809;
+        border: 1px solid #EDEEEF;
+        border-radius: 0px;
+    } 
+    textarea{
+        height: 50px!important;
     }
+   
     .form__name-email{
         display: flex;
         column-gap: 10px;
@@ -29,11 +48,44 @@
         flex-direction: column;
         
     }
+    .error{
+        color: red;
+        font-size: 11px;
+        margin: 3px 0px 0px 0px;
+    }
    
     .form__message{
         input{
             height: 100px;
         }
     }
-
+    .form__submit-btn_container{
+        width:100px;
+        height:30px;
+        
+        button{
+            width: 100%;
+            height: 100%;
+            background: none;
+            border: 1px solid #EDEEEF;
+            color: #fff;
+            cursor: pointer;
+        }
+        
+    }
+    .spinner {
+        animation-name: spin;
+        animation-duration: 500ms;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+      
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
 }
