--- a/src/components/resume/resume.scss
+++ b/src/components/resume/resume.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #1F1F1F;
+    background-color: #080809;
     border-radius: 5px;
     padding: 30px;
 
@@ -10,7 +10,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow: 6px 0px 6px 0 rgb(76 76 76 / 21%);
+        border: 1px solid #EDEEEF;
+        border-radius: 5px;
         // flex-grow: 1;
         .resume__menu_item {
             display: flex;
