--- a/src/components/resume/resumeContents/resumeContent.scss
+++ b/src/components/resume/resumeContents/resumeContent.scss
@@ -1,10 +1,10 @@
 .resume__content_container{
         flex-grow: 4;
         min-width: 300px;
-        background: #1F1F1F;
+        background: #080809;
         height: 100%;
         min-height: 400px;
-        // border: 1px solid #E29ECD;
+        border: 1px solid #EDEEEF;
         border-radius: 8px;
         max-width: 850px;
         display: flex;
