--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,14 @@
 @import "./styles//variables";
 body {
   margin: 0;
-  font-family:'Poppins',sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family:'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $primary-bg-color;
   color: $primary-font-color;
+  
 }
 
 code {
