fix(client): image profile changed

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -93,7 +93,7 @@
         // box-shadow: 1px 1px 1px 1px  #B177F0
             box-shadow: #B177F0 0px 0px 0px 1px , #B177F0 0px 0px 0px 1px;
        .home__bgnd-img{
-        background-image: url(https://cdni.autocarindia.com/Utils/ImageResizer.ashx?n=https://cdni.autocarindia.com/ExtraImages/20230320044023_SDR%201.jpg&w=700&q=90&c=1);
+        // background-image: url(https://cdni.autocarindia.com/Utils/ImageResizer.ashx?n=https://cdni.autocarindia.com/ExtraImages/20230320044023_SDR%201.jpg&w=700&q=90&c=1);
         height: 92%;
         width: 92%;
         border-radius: 50%;
