fix(client): imge profile changed

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -97,6 +97,10 @@
         height: 92%;
         width: 92%;
         border-radius: 50%;
+        img{
+            transform: scale(1.1);
+            width: 100%;
+        }
        }
     }
     
