fix(client): fixed navigation bar

--- a/src/components/aboutme/aboutmeImage/abtMeImg.scss
+++ b/src/components/aboutme/aboutmeImage/abtMeImg.scss
@@ -5,6 +5,7 @@
     width: 382px;
     height: 382px;
     position: relative;
+    z-index: 2;
     // color: $primary-font-color;
     .icon{
         position: absolute;
