--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -1,6 +1,9 @@
 @import "../../styles/variables";
 .navBar__container{
     background-color: $secondary-bg-color;
+    position: fixed;
+    width: 100%;
+    z-index: 3;
     .navBar__link-container{
     display: flex;
     flex-direction: row;
@@ -9,7 +12,7 @@
     column-gap: 25px;
     height: 100px;
     max-width: 1280px;
-
+      
     .navBar__link{
         color: $primary-font-color;
         font-size: 16px;
